Restructure project image directory

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -224,7 +224,7 @@ interests: - &#34;Embedded systems&#34; - &#34;Electronics&#34; - &#34;System pr
  
  </p>
 <p>Also here&rsquo;s a picture of me (man I look so weird):
-<img alt="Profile picture" src="/img/profile.jpg"></p>
+<img alt="Profile picture" src="/img/about/profile.jpg"></p>
 
             </div>
         </article>
