Update toml file

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -9,7 +9,7 @@
 Email: [namberinos@gmail.com]
 Find me: [GitHub] [LinkedIn]
 interests: - &amp;#34;Embedded systems&amp;#34; - &amp;#34;Electronics&amp;#34; - &amp;#34;System programming&amp;#34; - &amp;#34;Cybersecurity&amp;#34; - &amp;#34;Robotics&amp;#34; - &amp;#34;Computational Science&amp;#34; hobbies: - &amp;#34;Learning new things&amp;#34; - &amp;#34;Science&amp;#34; - &amp;#34;Running&amp;#34; - &amp;#34;Reading&amp;#34; - &amp;#34;Movies&amp;#34; - &amp;#34;Gaming&amp;#34; My Journey (so far) I&amp;rsquo;ve always been interested in computers my entire life." />
-<meta name="keywords" content="homepage, blog" />
+<meta name="keywords" content="homepage, blog, tech, engineering, portfolio, cybersecurity, embedded systems, electronics" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
 <link rel="canonical" href="https://namberino.github.io/about/" />
