--- a/public/vi/about/index.html
+++ b/public/vi/about/index.html
@@ -9,7 +9,7 @@
 Email: [namberinos@gmail.com]
 Đường link khác: [GitHub] [LinkedIn]
 sở-thích: - &amp;#34;Hệ thống nhúng&amp;#34; - &amp;#34;Điện tử&amp;#34; - &amp;#34;Lập trình hệ thống&amp;#34; - &amp;#34;Bảo mật thông tin&amp;#34; - &amp;#34;Robot&amp;#34; - &amp;#34;Khoa học tính toán&amp;#34; - &amp;#34;Học về điều mới&amp;#34; - &amp;#34;Khoa học&amp;#34; - &amp;#34;Chạy&amp;#34; - &amp;#34;Đọc&amp;#34; - &amp;#34;Xem phim&amp;#34; - &amp;#34;Gaming&amp;#34; Lịch sử của Nam Kể từ khi mình được tiếp xúc với máy tính từ thời tiều học, mình đã trở nên rất yêu thích máy tính và công nghệ từ đó." />
-<meta name="keywords" content="homepage, blog" />
+<meta name="keywords" content="homepage, blog, tech, engineering, portfolio, cybersecurity, embedded systems, electronics" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
 <link rel="canonical" href="https://namberino.github.io/vi/about/" />
