Update logo text

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -120,7 +120,7 @@ interests: - &#34;Embedded systems&#34; - &#34;Electronics&#34; - &#34;System pr
         
             <span class="logo__mark">></span>
             <span class="logo__text ">
-                nam$journal</span>
+                nam@journal</span>
             <span class="logo__cursor" style=
                   "
                    
